--- a/Multiple-Disease-Predictor/templates/parkinsons.html
+++ b/Multiple-Disease-Predictor/templates/parkinsons.html
@@ -28,7 +28,7 @@
     margin: 0px 0px 10px 0px;
     border: 1px solid #f5ac1b;
     padding: 20px;
-    background: #db74af;
+    background: #005da0;
     box-shadow: inset 0px 0px 15px #FFE5E5;
     -moz-box-shadow: inset 0px 0px 15px #FFE5E5;
     -webkit-box-shadow: inset 0px 0px 15px #FFE5E5;
