--- a/Multiple-Disease-Predictor/templates/index.html
+++ b/Multiple-Disease-Predictor/templates/index.html
@@ -40,8 +40,8 @@
           veritatis? Quisquam odio possimus placeat aliquid natus excepturi
           nihil, aspernatur sint?
         </p>
-        <a href="#appointment" class="btn"
-          >appointment us <span class="fas fa-chevron-right"></span
+        <a href="login" class="btn"
+          >Login to Predict Diseases <span class="fas fa-chevron-right"></span
         ></a>
       </div>
     </section>
