--- a/Multiple-Disease-Predictor/templates/index.html
+++ b/Multiple-Disease-Predictor/templates/index.html
@@ -197,9 +197,9 @@
       <div class="box-container">
         <div class="box">
           <h3>quick links</h3>
-          <a href="#"><i class="fas fa-chevron-right"></i>home</a>
-          <a href="#"><i class="fas fa-chevron-right"></i>about</a>
-          <a href="#"><i class="fas fa-chevron-right"></i>service</a>
+         
+          <a href="login"><i class="fas fa-chevron-right"></i>login</a>
+          <a href="register"><i class="fas fa-chevron-right"></i>register</a>
           <a href="#"><i class="fas fa-chevron-right"></i>appointment</a>
         </div>
 
