--- a/Multiple-Disease-Predictor/templates/index.html
+++ b/Multiple-Disease-Predictor/templates/index.html
@@ -22,7 +22,7 @@
       <nav class="navbar">
         <a href="login">Login</a>
         <a href="register">Register</a>
-        <a href="#appointment">appointments</a>
+        <a href="#appointment">Nearby Hospitals</a>
       </nav>
 
       <div id="menu-btn" class="fas fa-bars"></div>
@@ -161,7 +161,7 @@
     </section>
 
     <section class="appointment" id="appointment">
-      <h1 class="heading"><span>appointment</span>now</h1>
+      <h1 class="heading"><span>Search</span>Nearby Hospitals</h1>
       <div class="row">
         <div class="image">
           <img src="{{url_for('static',filename='image/appointment-img.svg')}}" alt="" />
@@ -200,7 +200,7 @@
          
           <a href="login"><i class="fas fa-chevron-right"></i>login</a>
           <a href="register"><i class="fas fa-chevron-right"></i>register</a>
-          <a href="#"><i class="fas fa-chevron-right"></i>appointment</a>
+          <a href="#"><i class="fas fa-chevron-right"></i>Nearby Hospitals</a>
         </div>
 
         <div class="box">
