--- a/Multiple-Disease-Predictor/templates/home.html
+++ b/Multiple-Disease-Predictor/templates/home.html
@@ -9,8 +9,9 @@
 
     
     body {
-        background-image: url('/static/backgroundimage.jpg');
-        background-repeat: no-repeat;
+      background-image: url('/Multiple-Disease-Predictor/static/bg.jpg');
+
+      background-repeat: no-repeat;
         background-attachment: fixed;
         background-size: 100% 100%;
     }
