new light bg added

--- a/Multiple-Disease-Predictor/templates/home.html
+++ b/Multiple-Disease-Predictor/templates/home.html
@@ -9,7 +9,7 @@
 
     
     body {
-      background-image: url('/Multiple-Disease-Predictor/static/bg.jpg');
+      background-image: url('/Multiple-Disease-Predictor/static/bg2.jpg.crdownload');
 
       background-repeat: no-repeat;
         background-attachment: fixed;
