--- a/Multiple-Disease-Predictor/templates/index.html
+++ b/Multiple-Disease-Predictor/templates/index.html
@@ -36,9 +36,9 @@
       <div class="content">
         <h3>We take care of your healthy life</h3>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero,
-          veritatis? Quisquam odio possimus placeat aliquid natus excepturi
-          nihil, aspernatur sint?
+          Your health is our top priority. With our comprehensive range of services
+          and personalized care, we are committed to helping you achieve 
+          and maintain a healthy and fulfilling life.
         </p>
         <a href="login" class="btn"
           >Login to Predict Diseases <span class="fas fa-chevron-right"></span
