--- a/Multiple-Disease-Predictor/templates/index.html
+++ b/Multiple-Disease-Predictor/templates/index.html
@@ -83,13 +83,13 @@
         <div class="content">
           <h3>world's best quality treatment</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
-            cupiditate hic dolore praesentium quod voluptatum ad porro, eius
-            natus pariatur!
+            Experience world-class healthcare with our premium quality treatments.</br> 
+            Our expert team of healthcare professionals are dedicated to delivering 
+
           </p>
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus,
-            rem?
+            the best possible care to our patients, using state-of-the-art technology</br>
+            and the latest medical advancements.
           </p>
           <a href="#" class="btn"
             >learn more <span class="fas fa-chevron-right"></span
