--- a/Multiple-Disease-Predictor/templates/index.html
+++ b/Multiple-Disease-Predictor/templates/index.html
@@ -168,27 +168,18 @@
         </div>
 
         <form action="" method="post">
-          <h3>make appointment</h3>
-          <input type="text" name="name" placeholder="your name" class="box" />
-          <input
-            type="number"
-            name="number"
-            placeholder="your number "
-            class="box"
-          />
-          <input
-            type="email"
-            name="email "
-            placeholder="your email"
-            class="box"
-          />
-          <input type="date" name="date" class="box" />
-          <input
-            type="submit"
-            name="submit"
-            value="appointment now"
-            class="btn"
-          />
+          
+          <form action="" method="post">
+          <center>
+            <h1 style="color:lawngreen;">
+              Hospital
+            </h1>
+            
+            <div>
+              <!-- Google Map Copied Code -->
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d112046.22785925181!2d77.09810396250002!3d28.646402900000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cfd22bbd4a035%3A0xc92e7b3bfe5ce245!2sHospital!5e0!3m2!1sen!2sin!4v1679129482129!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+          </center>
         </form>
       </div>
     </section>
