--- a/Multiple-Disease-Predictor/templates/index.html
+++ b/Multiple-Disease-Predictor/templates/index.html
@@ -105,7 +105,8 @@
         <div class="box">
           <i class="fas fa-notes-medical"></i>
           <h3>free checkup</h3>
-          <p>Lorem ipsum dolor sit amet consectetur.</p>
+            <p>the service of scheduling and booking medical consultations 
+              with healthcare professionals through internet-based platforms.</p>
           <a href="#" class="btn"
             >learn more <span class="fas fa-chevron-right"></span
           ></a>
@@ -114,7 +115,7 @@
         <div class="box">
           <i class="fas fa-ambulance"></i>
           <h3>24/7 ambulance</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+          <p>24/7 ambulance service provides emergency medical transportation</p>
           <a href="#" class="btn"
             >learn more <span class="fas fa-chevron-right"> </span
           ></a>
@@ -124,7 +125,7 @@
           <i class="fas fa-user-md"></i>
           <h3>expert doctors</h3>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. In, nobis!
+            Expert doctors are highly skilled and knowledgeable medical professionals.
           </p>
           <a href="#" class="btn"
             >learn more <span class="fas fa-chevron-right"></span
@@ -134,7 +135,8 @@
         <div class="box">
           <i class="fas fa-pills"></i>
           <h3>medicine</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+          <p>medicine is provided in the form of recommended treatments 
+            and medications based on the predicted diseaseor disorder,</p>
           <a href="" class="btn"
             >learn more <span class="fas fa-chevron-right"></span
           ></a>
@@ -143,7 +145,7 @@
         <div class="box">
           <i class="fas fa-procedures"></i>
           <h3>bed facility</h3>
-          <p>Lorem ipsum dolor sit amet consectetur.</p>
+          <p>Bed Facility provided by hospital to stay while medical treatment.</p>
           <a href="#" class="btn"
             >learn more <span class="fas fa-chevron-right"></span
           ></a>
@@ -152,7 +154,7 @@
         <div class="box">
           <i class="fas fa-heartbeat"></i>
           <h3>total care</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+          <p>Comprehensive and integrated approach to medical treatment.</p>
           <a href="#" class="btn"
             >learn more <span class="fas fa-chevron-right"></span
           ></a>
